# drone_control

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: control.yaml
launch/: control.launch
nodes/: control_node
src/drone_control/: __init__.py  drones.py
src/drone_control/common/: __init__.py  common.py
src/drone_control/mavros/: __init__.py  commander.py  receiver.py  sender.py
src/drone_control/mocap/: __init__.py  tracking.py
